# cli-agent-runner

./: .codecov.yml  .gitignore  .vulture-whitelist.py  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh.md  SECURITY.md  build.sh  pyproject.toml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agent_runner/: __init__.py  _docgen.py  _emit.py  _redact.py  _registry.py  _substrate.py  _throttle.py  agent_runtime.py  api.py  api_types.py  cli.py  config.py  context_store.py  critic.py  defenses.py  detector_helpers.py  events.py  hooks.py  http_progress.py  lifecycle.py  metrics.py  monitor.py  prompt_loader.py  round_log.py  round_view.py  runner.py  scaffold.py  service_unit.py  startup_check.py  vcs_state.py
agent_runner/builtin_plugins/: _constants.py  claude_rate_limit.py  codewhale.py  default_dirty_handler.py  gemini.py
agent_runner/cli/: __init__.py  __main__.py  common.py  events_cmd.py  init_cmd.py  install_cmd.py  monitor_cmd.py  peek_cmd.py  round_cmd.py  serve_cmd.py  service_cmd.py  upgrade_cmd.py
agent_runner/presets/: aider.toml  claude.toml  codewhale.toml  gemini.toml  kimi.toml  pi.toml
deploy/: example-agent-runner.toml  launchd.plist.tmpl  run-loop.sh  systemd.service.tmpl
docs/: README.md  architecture.md  commands.md  configuration.md  events.md  long-running-agents.md  plugins.md  quickstart.md  runbook.md  thesis.md
docs/marketing/: README.md  promo-cn.html
docs/migrations/: 0.1.16.md  0.1.17.md  0.1.19.md  0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md  0.1.25.md  0.1.26.md  0.1.27.md  0.1.28.md  0.1.29.md  0.1.30.md  0.1.31.md  0.1.32.md  0.1.33.md  0.1.34.md  0.1.35.md  0.1.36.md  0.1.37.md  0.1.38.md  0.1.39.md  0.1.40.md  0.1.42.md  0.2.0.md  0.2.1.md  0.2.2.md
docs/recipes/: aider.md  codewhale.md  kimi.md  pi.md
docs/superpowers/specs/: 2026-05-15-gemini-preset-design.md
tests/: _test_helpers.py  conftest.py  generate_vulture_whitelist.py
tests/contract/: test_public_api_surface.py
tests/e2e/: conftest.py  test_e2e_graceful_stop.py  test_e2e_install_systemd.py  test_e2e_monitor_remote.py  test_e2e_round_lifecycle.py
tests/fixtures/cli-real-output/: claude-2.1.143-assistant-tool-use.jsonl  claude-2.1.143-result-event.jsonl  gemini-0.42.0-result-event.jsonl
tests/integration/: test_bounded_run.py  test_context_enricher_namespacing.py  test_dirty_handler_seam.py  test_fresh_eyes_signal.py  test_grace_kill_emission.py  test_install_dry_run.py  test_monitor_seeded.py  test_plugin_detector_loaded.py  test_plugin_owned_paths.py  test_plugin_real_flow.py  test_prompt_delivery_stdin.py  test_run_loop_backoff.py  test_run_one_round_with_fake_agent.py  test_scaffold_presets.py  test_serve_loop.py  test_substrate_fingerprint.py  test_transient_error_backoff.py
tests/invariants/: _event_scan.py  test_architecture.py  test_atomic_write_enforced.py  test_auto_stop_policy_ssot.py  test_catalogs.py  test_classification_ssot.py  test_config_error_consistency.py  test_config_value_set_ssot.py  test_doc_builtin_plugins.py  test_doc_claims_match_ssot.py  test_doc_cli_claims.py  test_doc_operator_surface.py  test_doc_transient_error_claims.py  test_docs_generated.py  test_docs_index_complete.py  test_entry_points_resolve.py  test_event_kind_registry.py  test_event_kinds_ssot.py  test_events_doc_contract.py  test_hook_contract_docs.py  test_layer_2_loop_size.py  test_module_boundaries.py  test_module_sizes.py  test_no_ai_signatures.py  test_no_pytest_skip_on_parse_fail.py  test_peek_schema_version.py  test_phase2_architecture.py  test_phase2_catalogs.py  test_phase2_module_sizes.py  test_plugins_config_stable.py  test_readme_zh_is_pointer.py  test_repo_constants_patched_in_tests.py  test_round_result_stable.py  test_set_diff_for_auto_tool_classification.py  test_stash_uses_sha_not_index.py  test_upstream_schema_canary.py  test_vulture_whitelist_generated.py
tests/literate/: parser.py  test_parser.py  test_quickstart.py
tests/unit/: test_agent_runtime.py  test_agent_runtime_grace.py  test_agent_runtime_progress.py  test_agent_runtime_signal_name.py  test_api_assemble_prompt.py  test_api_events_stream.py  test_api_install.py  test_api_observation.py  test_api_read_round_num.py  test_api_resolve_phase.py  test_api_service.py  test_api_types.py  test_auto_stop_gating.py  test_catalogs.py  test_claude_error_detector.py  test_claude_rate_limit_detector.py  test_cli.py  test_cli_common.py  test_cli_init_install.py  test_cli_monitor_http.py  test_cli_service_peek_monitor.py  test_cli_upgrade.py  test_codewhale_plugin.py  test_config.py  test_config_fresh_eyes.py  test_config_max_rounds.py  test_config_prompt_delivery.py  test_config_rate_limit_action.py  test_config_stop_file.py  test_config_substrate_fingerprint_paths.py  test_config_transient_error_action.py  test_context_store.py  test_critic.py  test_default_dirty_handler.py  test_defenses.py  test_detector_helpers.py  test_detector_protocol.py  test_dirty_handlers.py  test_docgen.py  test_events.py  (+39 more)
