[build-system]
# hatchling >= 1.27 is needed for PEP 639 SPDX `license` + `license-files`.
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "cli-agent-runner"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Restart-on-exit supervisor for autonomous CLI agents"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "wangyu", email = "wangyu@go2imagination.com" }]
keywords = ["agent", "supervisor", "claude", "autonomous", "systemd", "monitoring", "restart", "watchdog"]
classifiers = [
    # License is declared via PEP 639 `license = "Apache-2.0"`; the legacy
    # "License :: OSI Approved :: Apache Software License" classifier is
    # intentionally omitted to avoid double-declaration (PyPI deprecation path).
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/wan9yu/cli-agent-runner"
Documentation = "https://github.com/wan9yu/cli-agent-runner#readme"
Repository = "https://github.com/wan9yu/cli-agent-runner"
Issues = "https://github.com/wan9yu/cli-agent-runner/issues"
Changelog = "https://github.com/wan9yu/cli-agent-runner/blob/main/CHANGELOG.md"

[project.scripts]
agent-runner = "agent_runner.cli:main"

[project.entry-points."agent_runner.post_round_hooks"]
claude_error_detector = "agent_runner.builtin_plugins.claude_rate_limit:ClaudeErrorDetector"
gemini_error_detector = "agent_runner.builtin_plugins.gemini:GeminiErrorDetector"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "vulture>=2.13",
]
e2e = [
    "pytest>=8",
    "fabric>=3",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_runner"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "agent_runner/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["agent_runner/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess".msg = "Only agent_runtime.py, vcs_state.py, scaffold.py, monitor.py, metrics.py, api.py, _substrate.py, and cli/serve_cmd.py may use subprocess"

[tool.ruff.lint.per-file-ignores]
"agent_runner/agent_runtime.py" = ["TID251"]
"agent_runner/vcs_state.py" = ["TID251"]
"agent_runner/scaffold.py" = ["TID251"]
"agent_runner/monitor.py" = ["TID251"]
"agent_runner/metrics.py" = ["TID251"]
"agent_runner/api.py" = ["TID251"]
"agent_runner/_substrate.py" = ["TID251"]
"agent_runner/cli/serve_cmd.py" = ["TID251"]
"tests/**/*.py" = ["TID251"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.vulture]
paths = ["agent_runner"]
min_confidence = 80
exclude = ["tests/"]
ignore_decorators = ["@pytest.fixture"]

[tool.coverage.run]
branch = true
source = ["agent_runner"]
omit = [
    "agent_runner/_version.py",                 # generated by hatch-vcs
    "agent_runner/critic.py",                   # Phase 3 stubs; un-omit when implemented
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
