[build-system]
# hatchling >= 1.27 is needed for PEP 639 SPDX `license` + `license-files`.
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "cli-agent-runner"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Restart-on-exit supervisor for autonomous CLI agents"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "wangyu", email = "wangyu@go2imagination.com" }]
keywords = ["agent", "supervisor", "claude", "autonomous", "systemd", "monitoring", "restart", "watchdog"]
classifiers = [
    # License is declared via PEP 639 `license = "Apache-2.0"`; the legacy
    # "License :: OSI Approved :: Apache Software License" classifier is
    # intentionally omitted to avoid double-declaration (PyPI deprecation path).
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
dependencies = [
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://github.com/wan9yu/cli-agent-runner"
Documentation = "https://github.com/wan9yu/cli-agent-runner#readme"
Repository = "https://github.com/wan9yu/cli-agent-runner"
Issues = "https://github.com/wan9yu/cli-agent-runner/issues"
Changelog = "https://github.com/wan9yu/cli-agent-runner/blob/main/CHANGELOG.md"

[project.scripts]
agent-runner = "agent_runner.cli:main"

[project.entry-points."agent_runner.post_round_hooks"]
claude_error_detector = "agent_runner.builtin_plugins.claude_rate_limit:ClaudeErrorDetector"
gemini_error_detector = "agent_runner.builtin_plugins.gemini:GeminiErrorDetector"
codewhale_error_detector = "agent_runner.builtin_plugins.codewhale:CodewhaleErrorDetector"

[project.entry-points."agent_runner.dirty_handler_hooks"]
default_dirty_handler = "agent_runner.builtin_plugins.default_dirty_handler:DefaultDirtyHandler"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "vulture>=2.13",
]
e2e = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["agent_runner"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "agent_runner/_version.py"

[tool.ruff]
target-version = "py311"
line-length = 100
# _version.py is hatch-vcs-generated; .vulture-whitelist.py is a generated
# vulture whitelist of bare names (B018/F821 by design) — both are tooling
# artifacts, not hand-edited source.
extend-exclude = ["agent_runner/_version.py", ".vulture-whitelist.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "TID"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess".msg = "Only _substrate.py, agent_runtime.py, api.py, cli/install_cmd.py, cli/serve_cmd.py, cli/upgrade_cmd.py, metrics.py, monitor.py, scaffold.py, and vcs_state.py may use subprocess"

[tool.ruff.lint.per-file-ignores]
"agent_runner/agent_runtime.py" = ["TID251"]
"agent_runner/vcs_state.py" = ["TID251"]
"agent_runner/scaffold.py" = ["TID251"]
"agent_runner/monitor.py" = ["TID251"]
"agent_runner/metrics.py" = ["TID251"]
"agent_runner/api.py" = ["TID251"]
"agent_runner/_substrate.py" = ["TID251"]
"agent_runner/cli/serve_cmd.py" = ["TID251"]
"agent_runner/cli/install_cmd.py" = ["TID251"]
"agent_runner/cli/upgrade_cmd.py" = ["TID251"]
"tests/**/*.py" = ["TID251"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.vulture]
# .vulture-whitelist.py is GENERATED from every @dataclass field (its SSOT) by
# tests/generate_vulture_whitelist.py; the diff-clean invariant keeps it honest.
paths = ["agent_runner", ".vulture-whitelist.py"]
min_confidence = 60
ignore_names = [
    # SSOT: plugin-extension naming convention. Every register_* is invoked by
    # external plugins via entry_points, invisible to static analysis.
    "register_*",
    # SSOT: http.server dispatch convention. BaseHTTPRequestHandler calls
    # do_<VERB> (do_GET) by name; never from project code.
    "do_*",
    # SSOT: stdlib BaseHTTPRequestHandler.log_message override; called by the
    # framework's request-logging path, not from project code.
    "log_message",
]

[tool.coverage.run]
branch = true
source = ["agent_runner"]
omit = [
    "agent_runner/_version.py",                 # generated by hatch-vcs
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
